Prevent overflowing left/right column.

--- a/ratatoeskr/cms_style/layout.css
+++ b/ratatoeskr/cms_style/layout.css
@@ -145,6 +145,7 @@ h2 {
 	width: 50mm;
 	margin: 0px;
 	padding: 0px;
+	overflow: hidden;
 }
 
 .triplecolumns .column_right {
@@ -152,6 +153,7 @@ h2 {
 	width: 50mm;
 	margin: 0px;
 	padding: 0px;
+	overflow: hidden;
 }
 
 .triplecolumns .column_main {
@@ -171,15 +173,6 @@ h2 {
 .fullwidth {
 	width: 100%;
 }
-
-/*div.error {
-	border: 1px solid #f00;
-	background: #fcc;
-	color: #f00;
-	padding: 1em;
-	margin: 3mm 0mm 3mm;
-	text-align: center;
-}*/
 
 div.error {
 	border: 1px solid #8d8d8d;
